--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
    <title> Urban Economics 7th Edition Chapter 4 Solutions</title>
   <body>
+     <h1> Urban Economics 7th Edition Chapter 4 Solutions</h1>
 
-    <h2>Link is below</h2>
+    <h3>Link is below</h3>
     <a href="https://github.com/SaadAhmedSalim/Urban-Economics-7th-edition-Chapter-4-Solution/blob/main/Urban%20Economics_ch4_sol.pdf"> Click Me!</a>
      <br>
       <p>Check my Github</p>
